--- a/portfolio.html
+++ b/portfolio.html
@@ -13,96 +13,100 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <nav>
-            <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
-            <ul class="site-nav list">
-                <li class="item"><a href="./index.html" class="site-nav-link">Студия</a></li>
-                <li class="item"><a href="" class="site-nav-link current">Портфолио</a></li>
-                <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
+        <div class="container">
+            <nav>
+                <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
+                <ul class="site-nav list">
+                    <li class="item"><a href="./index.html" class="site-nav-link">Студия</a></li>
+                    <li class="item"><a href="" class="site-nav-link current">Портфолио</a></li>
+                    <li class="item"><a href="" class="site-nav-link">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="contacts-nav list">
+                <li class="item"><a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a></li>
+                <li class="item"><a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="contacts-nav list">
-            <li class="item"><a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a></li>
-            <li class="item"><a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
     <main>
         <!-- Услуги -->
-        <section>
-            <h1 class="visually-hidden">Услуги</h1>
-        <ul class="list">
-            <li><button type ="button" class="button-services">Все</button></li>
-            <li><button type ="button" class="button-services">Веб-сайты</button></li>            
-            <li><button type ="button" class="button-services">Приложения</button></li>
-            <li><button type ="button" class="button-services">Дизайн</button></li>
-            <li><button type ="button" class="button-services">Маркетинг</button></li>
-        </ul>        
-        <!-- Проэкты -->        
-            <ul class="projects list">
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/Tehno.jpg" alt="Технокряк" width="370" />
-                        <h2 class=projects-name>Технокряк</h2>
-                        <p class="projects-service">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/New-Orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
-                        <h2 class=projects-name>Постер New Orlean vs Golden Star</h2>
-                        <p class="projects-service">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/Seafood.jpg" alt="Ресторан Seafood" width="370" />
-                        <h2 class=projects-name>Ресторан Seafood</h2>
-                        <p class="projects-service">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/Prime.jpg" alt="Проект Prime" width="370" />
-                        <h2 class=projects-name>Проект Prime</h2>
-                        <p class="projects-service">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/Boxes.jpg" alt="Проект Boxes" width="370" />
-                        <h2 class=projects-name>Проект Boxes</h2>
-                        <p class="projects-service">Приложение</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/no-Borders.jpg" alt="Inspiration has no Borders" width="370" />
-                        <h2 class=projects-name>Inspiration has no Borders</h2>
-                        <p class="projects-service">Веб-сайт</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/Limited-Edition.jpg" alt="Издание Limited Edition" width="370" />
-                        <h2 class=projects-name>Издание Limited Edition</h2>
-                        <p class="projects-service">Дизайн</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/LAB.jpg" alt="Проект LAB" width="370" />
-                        <h2 class=projects-name>Проект LAB</h2>
-                        <p class="projects-service">Маркетинг</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="projects-link">
-                        <img src="./img/GrowingBusiness.jpg" alt="Growing Business" width="370" />
-                        <h2 class=projects-name>Growing Business</h2>
-                        <p class="projects-service">Приложение</p>
-                    </a>
-                </li>
-            </ul>
+        <section class="section">
+            <div class="container">
+                <h1 class="visually-hidden">Услуги</h1>
+                <ul class="list services">
+                    <li><button type="button" class="button-services">Все</button></li>
+                    <li><button type="button" class="button-services">Веб-сайты</button></li>
+                    <li><button type="button" class="button-services">Приложения</button></li>
+                    <li><button type="button" class="button-services">Дизайн</button></li>
+                    <li><button type="button" class="button-services">Маркетинг</button></li>
+                </ul>
+                <!-- Проэкты -->
+                <ul class="projects list">
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/Tehno.jpg" alt="Технокряк" width="370" />
+                            <h2 class=projects-name>Технокряк</h2>
+                            <p class="projects-service">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/New-Orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+                            <h2 class=projects-name>Постер New Orlean vs Golden Star</h2>
+                            <p class="projects-service">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/Seafood.jpg" alt="Ресторан Seafood" width="370" />
+                            <h2 class=projects-name>Ресторан Seafood</h2>
+                            <p class="projects-service">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/Prime.jpg" alt="Проект Prime" width="370" />
+                            <h2 class=projects-name>Проект Prime</h2>
+                            <p class="projects-service">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/Boxes.jpg" alt="Проект Boxes" width="370" />
+                            <h2 class=projects-name>Проект Boxes</h2>
+                            <p class="projects-service">Приложение</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/no-Borders.jpg" alt="Inspiration has no Borders" width="370" />
+                            <h2 class=projects-name>Inspiration has no Borders</h2>
+                            <p class="projects-service">Веб-сайт</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/Limited-Edition.jpg" alt="Издание Limited Edition" width="370" />
+                            <h2 class=projects-name>Издание Limited Edition</h2>
+                            <p class="projects-service">Дизайн</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/LAB.jpg" alt="Проект LAB" width="370" />
+                            <h2 class=projects-name>Проект LAB</h2>
+                            <p class="projects-service">Маркетинг</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="projects-link">
+                            <img src="./img/GrowingBusiness.jpg" alt="Growing Business" width="370" />
+                            <h2 class=projects-name>Growing Business</h2>
+                            <p class="projects-service">Приложение</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
     <!-- Футер -->
