--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link href="https://minhaskamal.github.io/DownGit/#/home?url=https://github.com/sindresorhus/modern-normalize/blob/main/modern-normalize.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css"/>
@@ -70,14 +71,14 @@
                 <section class="section even no-padding-top">
                     <div class="container">
                         <h2 class="section-title">Чем мы занимаемся</h2>
-                        <ul class="list">
-                            <li>
+                        <ul class="work-list list">
+                            <li class="work-item">
                                 <img src="./img/img.jpg" alt="Компьютер" width="370" />
                             </li>
-                            <li>
+                            <li class="work-item">
                                 <img src="./img/img(1).jpg" alt="Телефон" width="370" />
                             </li>
-                            <li>
+                            <li class="work-item">
                                 <img src="./img/img(2).jpg" alt="Планшет" width="370" />
                             </li>
                         </ul>
@@ -88,25 +89,33 @@
                     <div class="container">
                         <h2 class="section-title">Наша команда</h2>
                         <ul class="team list">
-                            <li>
+                            <li class="team-item">
                                 <img src="./img/img(3).jpg" alt="Игорь Демьяненко" width="270" />
-                                <h3 class="team-title">Игорь Демьяненко</h3>
-                                <p class="team-text">Product Designer</p>
+                                <div class="team-name">
+                                    <h3 class="team-title">Игорь Демьяненко</h3>
+                                    <p class="team-text">Product Designer</p>
+                                </div>
                             </li>
-                            <li>
+                            <li class="team-item">
                                 <img src="./img/img(4).jpg" alt="Ольга Репина" width="270" />
-                                <h3 class="team-title">Ольга Репина</h3>
-                                <p class="team-text">Frontend Developer</p>
+                                <div class="team-name">
+                                    <h3 class="team-title">Ольга Репина</h3>
+                                    <p class="team-text">Frontend Developer</p>
+                                </div>
                             </li>
-                            <li>
+                            <li class="team-item">
                                 <img src="./img/img(5).jpg" alt="Николай Тарасов" width="270" />
-                                <h3 class="team-title">Николай Тарасов</h3>
-                                <p class="team-text">Marketing</p>
+                                <div class="team-name">
+                                    <h3 class="team-title">Николай Тарасов</h3>
+                                    <p class="team-text">Marketing</p>
+                                </div>
                             </li>
-                            <li>
+                            <li class="team-item">
                                 <img src="./img/img(6).jpg" alt="Михаил Ермаков" width="270" />
-                                <h3 class="team-title">Михаил Ермаков</h3>
-                                <p class="team-text">UI Designer</p>
+                                <div class="team-name">
+                                    <h3 class="team-title">Михаил Ермаков</h3>
+                                    <p class="team-text">UI Designer</p>
+                                </div>
                             </li>
                         </ul>
                     </div>
