--- a/portfolio.html
+++ b/portfolio.html
@@ -5,9 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css" />
+            <link rel="stylesheet" href="./css/style.css" />
 </head>
 
 <body>
@@ -129,14 +132,17 @@
     </main>
     <!-- Футер -->
     <footer>
-        <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
-        <address>
-            <ul class="list">
-                <li><a href="https://goo.gl/maps/Y731SHwb4K6uivzs8" target="_blank" rel="noreferrer noopener" class="list-address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
+            <address>
+                <ul class="list">
+                    <li><a href="https://goo.gl/maps/Y731SHwb4K6uivzs8" target="_blank" rel="noreferrer noopener"
+                            class="list-address">г. Киев, пр-т Леси Украинки, 26</a></li>
+                    <li><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
