--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,10 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <div class="container main-nav">
+        <div class="container nav">
             <nav class="main-nav">
                 <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
-                <ul class="site-nav list">
+                <ul class="site-nav">
                     <li class="site-nav-item"><a href="./index.html" class="site-nav-link">Студия</a></li>
                     <li class="site-nav-item"><a href="" class="site-nav-link current">Портфолио</a></li>
                     <li class="site-nav-item"><a href="" class="site-nav-link">Контакты</a></li>
@@ -36,7 +36,7 @@
         <section class="section">
             <div class="container">
                 <h1 class="visually-hidden">Услуги</h1>
-                <ul class="list services">
+                <ul class="services">
                     <li class="services-item"><button type="button" class="button-services">Все</button></li>
                     <li class="services-item"><button type="button" class="button-services">Веб-сайты</button></li>
                     <li class="services-item"><button type="button" class="button-services">Приложения</button></li>
@@ -44,11 +44,11 @@
                     <li class="services-item"><button type="button" class="button-services">Маркетинг</button></li>
                 </ul>
                 <!-- Проэкты -->
-                <ul class="projects list">
+                <ul class="projects">
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/Tehno.jpg" alt="Технокряк" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Технокряк</h2>
                                 <p class="projects-service">Веб-сайт</p>
                             </div>
@@ -57,7 +57,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/New-Orlean.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Постер New Orlean vs Golden Star</h2>
                                 <p class="projects-service">Дизайн</p>
                             </div>
@@ -66,7 +66,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/Seafood.jpg" alt="Ресторан Seafood" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Ресторан Seafood</h2>
                                 <p class="projects-service">Приложение</p>
                             </div>
@@ -75,7 +75,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/Prime.jpg" alt="Проект Prime" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Проект Prime</h2>
                                 <p class="projects-service">Маркетинг</p>
                             </div>
@@ -84,7 +84,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/Boxes.jpg" alt="Проект Boxes" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Проект Boxes</h2>
                                 <p class="projects-service">Приложение</p>
                             </div>
@@ -93,7 +93,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/no-Borders.jpg" alt="Inspiration has no Borders" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Inspiration has no Borders</h2>
                                 <p class="projects-service">Веб-сайт</p>
                             </div>
@@ -102,7 +102,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/Limited-Edition.jpg" alt="Издание Limited Edition" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Издание Limited Edition</h2>
                                 <p class="projects-service">Дизайн</p>
                             </div>
@@ -111,7 +111,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/LAB.jpg" alt="Проект LAB" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Проект LAB</h2>
                                 <p class="projects-service">Маркетинг</p>
                             </div>
@@ -120,7 +120,7 @@
                     <li class="projects-item">
                         <a href="" class="projects-link">
                             <img src="./img/GrowingBusiness.jpg" alt="Growing Business" width="370" />
-                            <div>
+                            <div class="projects-title">
                                 <h2 class=projects-name>Growing Business</h2>
                                 <p class="projects-service">Приложение</p>
                             </div>
@@ -136,10 +136,10 @@
             <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
             <address>
                 <ul class="list">
-                    <li><a href="https://goo.gl/maps/Y731SHwb4K6uivzs8" target="_blank" rel="noreferrer noopener"
+                    <li class="item-address"><a href="https://goo.gl/maps/Y731SHwb4K6uivzs8" target="_blank" rel="noreferrer noopener"
                             class="list-address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                    <li><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+                    <li class="item-link"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
+                    <li class="item-link"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
                 </ul>
             </address>
         </div>
