--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 <body>
     <!-- Шапка сайта -->
     <header>
-        <div class="container main-nav">
+        <div class="container nav">
             <nav class="main-nav">
                 <a href="./index.html" class="logo"><span class="logo-web">Web</span>Studio</a>
-                <ul class="site-nav list">
+                <ul class="site-nav">
                     <li class="site-nav-item"><a href="./index.html" class="site-nav-link current">Студия</a></li>
                     <li class="site-nav-item"><a href="./portfolio.html" class="site-nav-link">Портфолио</a></li>
                     <li class="site-nav-item"><a href="" class="site-nav-link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="contacts-nav list">
+            <ul class="contacts-nav">
                 <li class="contacts-nav-item"><a href="mailto:info@devstudio.com" class="contacts-nav-link">info@devstudio.com</a></li>
                 <li class="contacts-nav-item"><a href="tel:+380961111111" class="contacts-nav-link">+38 096 111 11 11</a></li>
             </ul>
@@ -34,14 +34,16 @@
             <main>
                 <!-- Герой -->
                 <section class="hero">
-                    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                    <a href="" class="button hero-button">Заказать услугу</a>
+                    <div>
+                        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                        <button type="button" class="button hero-button">Заказать услугу</button>
+                    </div>
                 </section>
                 <!-- Преимущества -->
                 <section class="section">
                     <div class="container">
                         <h2 class="visually-hidden">Преимущества</h2>
-                        <ul class="feature list">
+                        <ul class="feature">
                             <li class= "feature-item">
                                 <h3 class="feature-title">Внимание к деталям</h3>
                                 <p>
@@ -70,10 +72,10 @@
                     </div>
                 </section>
                 <!-- Примеры работ -->
-                <section class="section even no-padding-top">
+                <section class="section no-padding-top">
                     <div class="container">
                         <h2 class="section-title">Чем мы занимаемся</h2>
-                        <ul class="work-list list">
+                        <ul class="work-list">
                             <li class="work-item">
                                 <img src="./img/img.jpg" alt="Компьютер" width="370" />
                             </li>
@@ -87,10 +89,10 @@
                     </div>
                 </section>
                 <!-- Наша команда -->
-                <section class="section even">
+                <section class="section team-section">
                     <div class="container">
                         <h2 class="section-title">Наша команда</h2>
-                        <ul class="team list">
+                        <ul class="team">
                             <li class="team-item">
                                 <img src="./img/img(3).jpg" alt="Игорь Демьяненко" width="270" />
                                 <div class="team-name">
@@ -128,11 +130,11 @@
                 <div class="container">
                     <a href="./index.html" class="logo-footer"><span class="logo-web">Web</span>Studio</a>
                     <address>
-                        <ul class="list">
-                            <li><a href="https://goo.gl/maps/Y731SHwb4K6uivzs8" target="_blank" rel="noreferrer noopener"
+                        <ul>
+                            <li class="item-address"><a href="https://goo.gl/maps/Y731SHwb4K6uivzs8" target="_blank" rel="noreferrer noopener"
                                     class="list-address">г. Киев, пр-т Леси Украинки, 26</a></li>
-                            <li><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
-                            <li><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
+                            <li class="item-link"><a href="mailto:info@devstudio.com" class="footer-link">info@devstudio.com</a></li>
+                            <li class="item-link"><a href="tel:+380961111111" class="footer-link">+38 096 111 11 11</a></li>
                         </ul>
                     </address>
                 </div>
